correction photo/ correction structure text plus visible/ responsive corriger ajout balise meta viewport

--- a/bureau.css
+++ b/bureau.css
@@ -1,8 +1,193 @@
 ﻿
 
 
+
+
+    a:visited {
+    }
+
+    a { 
+        color: white;
+    }
+
+    hr {
+        background-color: orange;
+        height          : 2px;
+        border          : 5px;
+    }
+
+    body, html {
+        padding: 0;
+        margin : 0;
+    }
+
+
+    /*bloc gauche*/
+    #block1 {
+        background-color: #F4D03F;
+        display         : flex;
+        flex-direction  : column;
+        text-align      : left;
+        width           : 100%;
+    }
+
+
+    .titreaside {
+        background-color: #424949;
+        color           : #F4D03F;
+        padding-top     : 10%;
+        padding-bottom  : 10%;
+        margin-bottom   : 10%;
+        margin-top      : 10%;
+        text-align      : center;
+    }
+
+    .textaside {
+        text-align   : left;
+        padding-left : 5%;
+        padding-right: 5%;
+    }
+
+    #loisir {
+        display        : flex;
+        flex-direction : column;
+        justify-content: space-between;
+        height         : 100%;
+        margin-bottom  :  60px;
+    }
+
+    #logoloisir {
+        display        : flex;
+        flex-direction : row;
+        justify-content: space-between;
+        list-style     : none;
+        padding-right  :  7%;
+    }
+
+    /*bloc droit*/
+
+    #block2 {
+        padding-left: 5%;
+        ;
+    }
+
+    #titresection {
+        color: orange;
+    }
+
+.lignesection {
+    display      : inline-block;
+    border-bottom: 2px solid orange;
+    
+}
+     
+     #recomandation{
+         display        : flex;
+         flex-direction : row;
+         justify-content: space-between;
+         padding-right  : 10%;
+         padding-left   : 10%;
+     }
+     .recomandation{
+         list-style: none;
+     }
+
+
+    /*couleur icone*/
+
+    .fa-pencil {
+        color: orange;
+    }
+
+    .fa-circle {
+        color        : orange;
+        margin-bottom:  1em;
+    }
+
+    .fa-circle-o-notch {
+        color        : orange;
+        margin-bottom:  1em;
+    }
+
+    .fa-briefcase {
+        color: orange;
+    }
+
+    .fa-graduation-cap {
+        color: orange;
+    }
+
+@media screen and (max-width: 1024px) {
+
+    #body {
+        display       : flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .misenpagearticlesection {
+        display       : flex;
+        flex-direction: column;
+     }
+    .date {
+       text-align: left;
+       text-align: center;
+       background-color:rgba(239, 243, 240, 0.61);
+      
+       }
     p, h1, h2, li {
         font-family: Arya;
+        font-size  : 30px;
+    }
+
+    h1 {
+        font-size: 80px;
+    }
+
+    h2 {
+        font-size: 50px;
+    }
+
+    h3 {
+        font-size: 38px;
+    }
+
+    a:hover {
+        color: black;
+    }
+    .photo {
+        margin-top  : 60px;
+        margin-left : auto;
+        margin-right: auto;
+        padding-top : 10%;
+        border      : 7px solid rgba(0, 0, 0, 0.589);
+        padding     : 1px;
+       border-radius: 300px;
+       width        : 30%;
+      height        : 15%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    #body {
+        display       : flex;
+        flex-direction: row;
+        justify-content: space-between;
+        
+    }
+    .misenpagearticlesection {
+        display       : flex;
+        flex-direction: column;
+     }
+
+    .date {
+        margin-top  : 5%;
+        margin-right: 10%;
+        white-space : nowrap;
+        line-height : 5px;
+    }
+    p, h1, h2, li {
+        font-family: Arya;
+        font-size  : 20px;
     }
 
     h1 {
@@ -20,144 +205,21 @@
     a:hover {
         color: black;
     }
-
-    a:visited {
+    .photo {
+        margin-top  : 60px;
+        margin-left : auto;
+        margin-right: auto;
+        padding-top : 10%;
+        border      : 7px solid rgba(0, 0, 0, 0.589);
+        padding     : 1px;
+       border-radius: 300px;
+      
+       
     }
-
-    a { 
-        color: white;
-    }
-
-    hr {
-        background-color: orange;
-        height: 2px;
-        border: 5px;
-    }
-
-    body, html {
-        padding: 0;
-        margin: 0;
-    }
-
-
-    /*bloc gauche*/
-    #block1 {
-        background-color: #F4D03F;
-        display: flex;
+    .textesection{
+        display       : flex;
         flex-direction: column;
-        text-align: left;
-        width: 100%;
-    }
-
-    .profilphoto {
-        margin: 0 auto;
-        padding-top: 10%;
-    }
-
-    .blacktittleblock1 {
-        background-color: #424949;
-        color: #F4D03F;
-        padding-top: 10%;
-        padding-bottom: 10%;
-        margin-bottom: 10%;
-        margin-top: 10%;
-        text-align: center;
-    }
-
-    .contact {
-        text-align: left;
-        font-size: 20px;
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-
-    #loisir {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
-        margin-bottom: 60px;
-    }
-
-    #logoloisir {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-    /*bloc droit*/
-
-    #block2 {
-        padding-left: 5%;
-        ;
-    }
-
-    #titrecontenu {
-        color: orange;
-    }
-
-.lignedev {
-    display: inline-block;
-    border-bottom: 2px solid orange;
-    
-}
-
-    .formarticle {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        line-height: 35px;
-        padding-bottom: 20px;
-        padding-top: 20px;
-    }
-
-
-    /*couleur icone*/
-
-    .fa-pencil {
-        color: orange;
-    }
-
-    .fa-circle {
-        color: orange;
-    }
-
-    .fa-circle-o-notch {
-        color: orange;
-    }
-
-    .fa-briefcase {
-        color: orange;
-    }
-
-    .fa-graduation-cap {
-        color: orange;
-    }
-@media screen and (max-width: 1024px) {
-
-    #page {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .date {
-        margin-top: 5%;
-        margin-right: 10%;
-
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    #page {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-right: 10%;
-    }
-    .date {
-        margin-top: 5%;
-        margin-right: 10%;
-        white-space: nowrap;
-        line-height: 5px;
+        padding-left  : 30%;
+        margin-top    : -10%;
     }
 }
